; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_host.c_is_valid_host_special_port.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_host.c_is_valid_host_special_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HOST_MAX_SPECIAL_PORT = common dso_local global i32 0, align 4
@HOST_MIN_SPECIAL_PORT = common dso_local global i32 0, align 4
@HOST_LAST_SPECIAL_KERNEL_PORT = common dso_local global i32 0, align 4
@HOST_MAX_SPECIAL_KERNEL_PORT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @is_valid_host_special_port to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_valid_host_special_port(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @HOST_MAX_SPECIAL_PORT, align 4
  %5 = icmp sle i32 %3, %4
  br i1 %5, label %6, label %20

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  %8 = load i32, i32* @HOST_MIN_SPECIAL_PORT, align 4
  %9 = icmp sge i32 %7, %8
  br i1 %9, label %10, label %20

10:                                               ; preds = %6
  %11 = load i32, i32* %2, align 4
  %12 = load i32, i32* @HOST_LAST_SPECIAL_KERNEL_PORT, align 4
  %13 = icmp sle i32 %11, %12
  br i1 %13, label %18, label %14

14:                                               ; preds = %10
  %15 = load i32, i32* %2, align 4
  %16 = load i32, i32* @HOST_MAX_SPECIAL_KERNEL_PORT, align 4
  %17 = icmp sgt i32 %15, %16
  br label %18

18:                                               ; preds = %14, %10
  %19 = phi i1 [ true, %10 ], [ %17, %14 ]
  br label %20

20:                                               ; preds = %18, %6, %1
  %21 = phi i1 [ false, %6 ], [ false, %1 ], [ %19, %18 ]
  %22 = zext i1 %21 to i32
  ret i32 %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
